@@ -58,6 +58,12 @@ chown oar:oar /usr/sbin/oarmonitor
 chmod 6750 /usr/sbin/oarmonitor
 chown oar:oar /usr/sbin/oar_resources_init
 chmod 6750 /usr/sbin/oar_resources_init
+chown oar:oar /usr/sbin/oar_phoenix
+chmod 6750 /usr/sbin/oar_phoenix
+
+# Phoenix home
+mkdir -p /var/lib/oar/phoenix
+chown oar:oar /var/lib/oar/phoenix
 
 # dh_installdeb will replace this with shell code automatically
 # generated by other debhelper scripts.
