@@ -2,6 +2,8 @@ OAR CHANGELOG
 =============
 
 version 2.5.0:
+  - New "Phoenix" tool to try to reboot automatically broken nodes
+    (to setup into /etc/oar/oar_phoenix.pl)
 
 version 2.4.2:
 --------------
